z-index and overflow fix

--- a/style.css
+++ b/style.css
@@ -263,7 +263,6 @@ button:hover {
 
 .floral-decoration {
   position: absolute;
-  z-index: 1000;
 }
 
 .floral-decoration__container {
@@ -308,6 +307,10 @@ button:hover {
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
+}
+
+.z-1000 {
+  z-index: 1000;
 }
 
 /* landing page  */
@@ -478,6 +481,7 @@ button:hover {
   color: var(--clr-text-light);
   place-items: center;
   width: 100%;
+  overflow-y: hidden;
 }
 
 .rsvp-wrapper {
@@ -528,6 +532,7 @@ button:hover {
   text-align: center;
   place-items: center;
   width: 100%;
+  overflow-y: hidden;
 }
 
 .registry-wrapper {
